made directional arrows work

--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
 	<div class="innerCrapper">
 		
 		<div class="photoThumbnails">
-			<p>kjhdlkghflgkhlgkhlgkhfslgkh</p>
-			<a href="" data-full="i/brunch.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/brunch.jpg" alt="">
-			</a>
-			<a href="" data-full="i/dunes.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/dunes.jpg" alt=""></a>
-			<a href="" data-full="i/icecream.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/icecream.jpg" alt=""></a>
-			
+			<a href="" data-full="i/brunch.jpg" data-desc="Image Description Here" rel="gallery01" height="320px"><img src="i/brunch.jpg" alt=""></a>
+			<a href="" data-full="i/dunes.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/dunes.jpg" alt=""></a>
+			<a href="" data-full="i/icecream.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/icecream.jpg" alt=""></a>
+		
+
 		</div> <!-- /.photoThumbnails -->
 
-		<div class="overlay hidden">
+		<div class="overlay">
 			<div class="modal">
-				
+				<a href="" class="close">x</a>
 				<a href="" class="arrowRight"><</a>
 				<a href="" class="arrowLeft">></a>
 				<div class="modalContent">
 					<img src="" alt="">
-				</div>	
+				</div> <!-- /.modalContent -->
 			
-			</div>
-
-		</div>
+			</div> <!-- /.modal -->
+		</div> <!-- /.overlay -->
 	</div> <!-- end innerCrapper -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
