nailed it: added overlay click off function. Added linked sides of lightbox

--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
 		</div> <!-- /.photoThumbnails -->
 
 		<div class="overlay">
-			<div class="modal">
-				<a href="" class="close">x</a>
-				<a href="" class="arrowRight"><</a>
-				<a href="" class="arrowLeft">></a>
+		<div class="overlayBKG">
+			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, ipsam.</p> -->
+		</div>
+			<div class="modal clearfix">
+				<div class="arrowRightDiv arrowDiv">
+					<a href="" class="arrowRight"></a>
+				</div>
+				<!-- end .arrowRightDiv -->
+
+				<div class="arrowLeftDiv arrowDiv">
+					<a href="" class="arrowLeft"></a>
+				</div>
+				<!-- end. arrowLeftDiv -->
+				
 				<div class="modalContent">
 					<img src="" alt="">
 				</div> <!-- /.modalContent -->
