Added a sidebar and hover effects. Switched up the images.

--- a/index.html
+++ b/index.html
@@ -3,62 +3,92 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Grid Gallery</title>
-	<link rel="stylesheet" href="css/styles.css">
+
+	<!-- FAVICON -->
+
+	<!-- GOOGLE FONTS -->
+	<link href='http://fonts.googleapis.com/css?family=Hind:400,500,600,300,700' rel='stylesheet' type='text/css' />
+
+	<!-- SITE STYLES -->
+	<link rel="stylesheet" href="css/styles.css" />
+
 </head>
 <body>
+
+<div class="wrapper clearfix">
+
+<section class="sidebar">
 	
+	<nav class="main-nav">
+		<h1>Site name</h1>
+		<ul class="nav-links">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul> <!-- END .nav-links -->
+	</nav> <!-- END .main-nav -->
+
+</section> <!-- END .sidebar -->
+	
+<section class="gallery">
 	<div class="innerCrapper">
 		
 		<div class="photoThumbnails js-masonry" id="container">
-			<a href=""  class="item" data-full="i/brunch.jpg" data-desc="Image Description Here" rel="gallery01" height="320px"><img src="i/brunch.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/dunes.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/dunes.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/icecream.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/icecream.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/poncho.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/brunch.jpg" data-desc="Image Description Here" rel="gallery01" height="320px"><img src="i/brunch.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/dunes.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/dunes.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/icecream.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/icecream.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/poncho.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/brunch.jpg" data-desc="Image Description Here" rel="gallery01" height="320px"><img src="i/brunch.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/dunes.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/dunes.jpg" alt=""></a>
-
-			<a href=""  class="item" data-full="i/icecream.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/icecream.jpg" alt=""></a>
 			
-			<a href=""  class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01" height="240px"><img src="i/poncho.jpg" alt=""></a>
+			<a href="" class="item" data-full="i/gridgallery-01.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-01.jpg" alt=""></a>
 		
+			<a href="" class="item"  data-full="i/gridgallery-04.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-04.jpg" alt=""></a>
+		
+			<a href="" class="item" data-full="i/gridgallery-03.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-03.jpg" alt=""></a>
 
-		</div> <!-- /.photoThumbnails -->
+			<a href="" class="item" data-full="i/gridgallery-02.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-02.jpg" alt=""></a>
+		
+			<a href="" class="item" data-full="i/gridgallery-05.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-05.jpg" alt=""></a>
+
+			<a href="" class="item" data-full="i/gridgallery-06.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-06.jpg" alt=""></a>
+			
+			<a href="" class="item" data-full="i/gridgallery-07.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-07.jpg" alt=""></a>
+
+			<a href=""  class="item" data-full="i/gridgallery-08.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-08.jpg" alt=""></a>
+
+			<a href="" class="item" data-full="i/gridgallery-09.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-09.jpg" alt=""></a>
+
+			<a href="" class="item" data-full="i/gridgallery-10.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-10.jpg" alt=""></a>
+
+			<a href="" class="item" data-full="i/gridgallery-11.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-11.jpg" alt=""></a>
+			
+			<a href="" class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/poncho.jpg" alt=""></a>
+		
+		</div> <!-- END .photoThumbnails -->
 
 		<div class="overlay">
-		<div class="overlayBKG">
-			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, ipsam.</p> -->
-		</div>
+
+			<div class="overlayBKG">
+				<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, ipsam.</p> -->
+			</div> <!-- END .overlayBKG -->
+
 			<div class="modal clearfix">
+
 				<div class="arrowRightDiv arrowDiv">
 					<a href="" class="arrowRight"></a>
-				</div>
-				<!-- end .arrowRightDiv -->
+				</div> <!-- END .arrowRightDiv -->
 
 				<div class="arrowLeftDiv arrowDiv">
 					<a href="" class="arrowLeft"></a>
-				</div>
-				<!-- end. arrowLeftDiv -->
+				</div> <!-- END .arrowLeftDiv -->
 				
 				<div class="modalContent clearfix">
-					<img src="" alt="" class="original">
-				</div> <!-- /.modalContent -->
+					<img src="" alt="">
+				</div> <!-- END .modalContent -->
 			
-			</div> <!-- /.modal -->
-		</div> <!-- /.overlay -->
-	</div> <!-- end innerCrapper -->
+			</div> <!-- END .modal -->
+		
+		</div> <!-- END .overlay -->
+	
+	</div> <!-- END .innerCrapper -->
+</section> <!-- END .gallery -->
+
+</div> <!-- END .wrapper -->
 
 <script src="masonry.pkgd.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -66,6 +96,13 @@
 
 
 <script>
+
+		$('.thumbnail-overlay').on('click', 'a', function(e) {
+			e.preventDefault;
+			var value = $(this).attr('data-full');
+			console.log(value);
+		});
+
 		var $container = $('#container');
 
 		$container.imagesLoaded( function() {
@@ -75,8 +112,6 @@
 		    }
 		  });
 		});
-
-
 </script>
 
 </body>
