Got rid of poncho. Added a max-width and height.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <section class="sidebar">
 	
 	<nav class="main-nav">
-		<h1>Site name</h1>
+		<h1>Grid Gallery</h1>
 		<ul class="nav-links">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="#">//Home</a></li>
+			<li><a href="#">//About</a></li>
+			<li><a href="#">//Contact</a></li>
 		</ul> <!-- END .nav-links -->
 	</nav> <!-- END .main-nav -->
 
@@ -55,9 +55,9 @@
 
 			<a href="" class="item" data-full="i/gridgallery-10.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-10.jpg" alt=""></a>
 
-			<a href="" class="item" data-full="i/gridgallery-11.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-11.jpg" alt=""></a>
+			<a href="" class="item" data-full="i/vertical-test.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/vertical-test.jpg" alt=""></a>
 			
-			<a href="" class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/poncho.jpg" alt=""></a>
+			<!-- <a href="" class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/poncho.jpg" alt=""></a> -->
 		
 		</div> <!-- END .photoThumbnails -->
 
