--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Grid Gallery</title>
 
+	<!-- VIEWPORT -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 	<!-- FAVICON -->
 
 	<!-- GOOGLE FONTS -->
@@ -54,11 +57,7 @@
 			<a href="" class="item" data-full="i/gridgallery-09.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-09.jpg" alt=""></a>
 
 			<a href="" class="item" data-full="i/gridgallery-10.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-10.jpg" alt=""></a>
-
-			<a href="" class="item" data-full="i/vertical-test.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/vertical-test.jpg" alt=""></a>
-			
-			<!-- <a href="" class="item" data-full="i/poncho.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/poncho.jpg" alt=""></a> -->
-		
+	
 		</div> <!-- END .photoThumbnails -->
 
 		<div class="overlay">
