Added another gallery page. Styled the nav to show which page you're on.

--- a/music.html
+++ b/music.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/styles.css" />
 
 </head>
-<body id="home">
+<body id="music" class="body-music">
 
 	<div class="wrapper clearfix">
 
@@ -29,10 +29,10 @@
 		<nav class="main-nav">
 			<h1><a href="index.html">Grid Gallery</a></h1>
 			<ul class="nav-links">
-				<li><a href="index.html" class="home">// Home</a></li>
+				<li><a href="index.html">// Home</a></li>
 				<li><a href="#" class="gallery-link">// Galleries</a>
 					<ul class="gallery-links">
-						<li><a href="music.html">Music</a></li>
+						<li><a href="#" class="music">Music</a></li>
 						<li><a href="#">Travel</a></li>
 						<li><a href="#">Portrait</a></li>
 					</ul> <!-- END .gallery-links -->
@@ -55,34 +55,23 @@
 			
 			<div class="photoThumbnails js-masonry" id="container">
 				
-				<a href="" class="item" data-full="i/gridgallery-01.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-01-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-01.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-01-th.jpg" alt=""></a>
 			
-				<a href="" class="item"  data-full="i/gridgallery-04.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-04-th.jpg" alt=""></a>
+				<a href="" class="item"  data-full="i/music-02.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-02-th.jpg" alt=""></a>
 			
-				<a href="" class="item" data-full="i/gridgallery-03.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-03-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-03.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-03-th.jpg" alt=""></a>
 
-				<a href="" class="item" data-full="i/gridgallery-02.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-02-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-04.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-04-th.jpg" alt=""></a>
 			
-				<a href="" class="item" data-full="i/gridgallery-05.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-05-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-05.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-05-th.jpg" alt=""></a>
 
-				<a href="" class="item" data-full="i/gridgallery-06.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-06-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-06.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-06-th.jpg" alt=""></a>
 				
-				<a href="" class="item" data-full="i/gridgallery-07.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-07-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/music-07.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-07-th.jpg" alt=""></a>
 
-				<a href=""  class="item" data-full="i/gridgallery-08.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-08-th.jpg" alt=""></a>
+				<a href=""  class="item" data-full="i/music-08.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-08-th.jpg" alt=""></a>
 
-				<a href="" class="item" data-full="i/gridgallery-09.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-09-th.jpg" alt=""></a>
-
-				<a href="" class="item" data-full="i/gridgallery-10.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-10-th.jpg" alt=""></a>
-
-				<a href="" class="item" data-full="i/gridgallery-11.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-11-th.jpg" alt=""></a>
-
-				<a href="" class="item" data-full="i/gridgallery-12.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-12-th.jpg" alt=""></a>
-
-				<a href="" class="item" data-full="i/gridgallery-13.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-13-th.jpg" alt=""></a>
-
-				<a href="" class="item" data-full="i/gridgallery-14.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-14-th.jpg" alt=""></a>
-
+				<a href="" class="item" data-full="i/music-09.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/music-09-th.jpg" alt=""></a>
 		
 			</div> <!-- END .photoThumbnails -->
 
@@ -110,7 +99,7 @@
 			
 			</div> <!-- END .overlay -->
 		
-		</div> <!-- END .innerWrapper -->
+		</div> <!-- END .innerCrapper -->
 	</section> <!-- END .gallery -->
 
 	<footer class="footer">
