Changed the navigation at different screen widths.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul class="nav-links">
 				<li><a href="index.html" class="home">// Home</a></li>
 				<li><a href="#" class="gallery-link">// Galleries</a>
-					<ul class="gallery-links">
+					<ul class="gallery-links secondNav">
 						<li><a href="music.html">Music</a></li>
 						<li><a href="#">Travel</a></li>
 						<li><a href="#">Portrait</a></li>
@@ -39,7 +39,7 @@
 				</li>
 				<li><a href="#">// About</a></li>
 				<li><a href="#" class="email-link">// Contact</a>
-					<ul class="contact-link">
+					<ul class="contact-link secondNav">
 						<li><a href="#">name@email.com</a></li>
 						<li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="#"><i class="fa fa-instagram"></i> Instagram</a></li>
