Fixed some of the responsive issues.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<li><a href="index.html" class="home">// Home</a></li>
 				<li><a href="#" class="gallery-link">// Galleries</a>
 					<ul class="gallery-links secondNav">
-						<li><a href="music.html">Music</a></li>
+						<li><a href="#">Music</a></li>
 						<li><a href="#">Travel</a></li>
 						<li><a href="#">Portrait</a></li>
 					</ul> <!-- END .gallery-links -->
@@ -55,7 +55,7 @@
 			
 			<div class="photoThumbnails js-masonry" id="container">
 				
-				<a href="" class="item" data-full="i/gridgallery-01.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-01-th.jpg" alt=""></a>
+				<a href="" class="item" data-full="i/gridgallery-15.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-15-th.jpg" alt=""></a>
 			
 				<a href="" class="item"  data-full="i/gridgallery-04.jpg" data-desc="Image Description Here" rel="gallery01"><img src="i/gridgallery-04-th.jpg" alt=""></a>
 			
