--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<li><a href="#">Portrait</a></li>
 					</ul> <!-- END .gallery-links -->
 				</li>
-				<li><a href="#" class="contact">Contact</a></li>
+				<li><a href="#" class="contact-button">Contact</a></li>
 			</ul> <!-- END .nav-links -->
 		</nav> <!-- END .main-nav -->
 
@@ -52,13 +52,16 @@
 			<p>Web-Developer & Photographer based in Toronto, ON.</p>
 			<ul class="contact-links">
 				<li>
-					<a href="#"><i class="fa fa-camera-retro fa-2x"></i></a>
-					<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-					<a href="#"><i class="fa fa-envelope fa-2x"></i></a>
-				</li><!--END .contact-links-->
-			</ul>
-		</div>
-	</div>
+					<a href="http://www.jnorthlewis.vsco.co" target="_blank"><i class="fa fa-camera-retro fa-2x"></i></a>
+					<a href="http://www.twitter.com/jnorthlewis" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+					<a href="mailto:jeremy@jnorthlewis.com"><i class="fa fa-envelope fa-2x"></i></a>
+				</li>
+			</ul><!--END .contact-links-->
+			<div class="button-container">
+				<a href="#" class="close-button">X</a>
+			</div><!--END .button-container-->
+		</div><!--END .wrap-->
+	</div><!--END .overlay-->
 		
 	<section class="gallery">
 		<div class="innerWrapper clearfix">
