--- a/index.html
+++ b/index.html
@@ -64,21 +64,13 @@
 			
 			<nav class="main-nav">
 				<ul class="nav-links">
-					<!-- <li><a href="index.html" class="home">Home</a></li> -->
-					<!-- <li><a href="#" class="gallery-link">Galleries</a>
-						<ul class="gallery-links secondNav">
-							<li><a href="#">Music</a></li>
-							<li><a href="#">Travel</a></li>
-							<li><a href="#">Portrait</a></li>
-						</ul>
-					</li> -->
 					<li><a href="#" class="contact-button">Info</a></li>
 				</ul> <!-- END .nav-links -->
 			</nav> <!-- END .main-nav -->
 		</header> <!-- END .sidebar -->
 
 		<div class="overlay">
-
+		<div class="wrapper">
 			<div class="wrap">
 				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					 viewBox="0 0 441 44" style="enable-background:new 0 0 441 44;" xml:space="preserve">
@@ -122,7 +114,7 @@
 					<a href="#" class="close-button">X</a>
 				</div><!--END .button-container-->
 			</div><!--END .wrap-->
-
+		</div>
 		</div><!--END .overlay-->
 			
 		<section class="gallery">
@@ -171,6 +163,8 @@
 
 		</footer> <!-- END .footer -->
 
+	<a href="#0" class="cd-top">Top</a>
+
 	</div> <!-- END .wrapper -->
 
 	<!-- SCRIPTS -->
@@ -179,7 +173,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script src="js/velocity.min.js"></script>
-	<script src="js/scripts.js"></script>
+	<script src="js/scripts-min.js"></script>
 
 	<script>
 
